[tool.poetry]
name = "mailroom"
version = "0.1.0"
description = "HTTP API for sending templated emails"
authors = ["Sebastian Acuna <sebastian@unholster.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-lambda = "^0.0.4"
python-decouple = "^3.6"
yarl = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
